v0.9/proof-of-concepts/rust-axum-app-server/error.log
warning: unused imports: `get_service` and `response::Html`
 --> src/main.rs:3:20
  |
3 |     routing::{get, get_service},
  |                    ^^^^^^^^^^^
4 |     Router,
5 |     response::Html
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
  --> src/handlers.rs:26:53
   |
26 |     ws.on_upgrade(|socket| handle_websocket(socket, state.clone()))
   |                            ----------------         ^^^^^^^^^^^^^ expected `Sender<String>`, found `Arc<Sender<String>>`
   |                            |
   |                            arguments to this function are incorrect
   |
   = note: expected struct `tokio::sync::broadcast::Sender<_>`
              found struct `Arc<tokio::sync::broadcast::Sender<_>>`
note: function defined here
  --> src/websocket.rs:7:14
   |
7  | pub async fn handle_websocket(socket: WebSocket, tx: broadcast::Sender<String>) {
   |              ^^^^^^^^^^^^^^^^                    -----------------------------

error[E0308]: mismatched types
   --> src/websocket.rs:17:29
    |
17  |             let _ = tx.send(text);
    |                        ---- ^^^^- help: try using a conversion method: `.to_string()`
    |                        |    |
    |                        |    expected `String`, found `Utf8Bytes`
    |                        arguments to this method are incorrect
    |
help: the return type of this call is `Utf8Bytes` due to the type of the argument passed
   --> src/websocket.rs:17:21
    |
17  |             let _ = tx.send(text);
    |                     ^^^^^^^^----^
    |                             |
    |                             this argument influences the return type of `send`
note: method defined here
   --> /home/panda/.cargo/registry/src/index.crates.io-6f17d22bba15001f/tokio-1.43.0/src/sync/broadcast.rs:587:12
    |
587 |     pub fn send(&self, value: T) -> Result<usize, SendError<T>> {
    |            ^^^^

error[E0308]: mismatched types
   --> src/websocket.rs:24:41
    |
24  |             if ws_tx.send(Message::Text(msg)).await.is_err() {
    |                           ------------- ^^^ expected `Utf8Bytes`, found `String`
    |                           |
    |                           arguments to this enum variant are incorrect
    |
note: tuple variant defined here
   --> /home/panda/.cargo/registry/src/index.crates.io-6f17d22bba15001f/axum-0.8.1/src/extract/ws.rs:709:5
    |
709 |     Text(Utf8Bytes),
    |     ^^^^
help: call `Into::into` on this expression to convert `String` into `Utf8Bytes`
    |
24  |             if ws_tx.send(Message::Text(msg.into())).await.is_err() {
    |                                            +++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `rust-axum-app-server` (bin "rust-axum-app-server") due to 3 previous errors; 1 warning emitted
